# catholic-kb

./: .catholic-kb-commit.json  .gitignore  .gitmodules  README.md  catholic-kb-hang-diagnosis.md  package-lock.json  package.json  setup.sh
.github/workflows/: build.yml
.sovereignspec/: constitution.md
.sovereignspec/specs/: catholic-knowledge-system.sspec
build-data/: compress-data.py  generate-embeddings.py
catholic-kb/: .gitignore  package-lock.json  package.json
catholic-kb/scripts/: release.sh
catholic-kb/src/: index.html  main.js
catholic-kb/src-tauri/: tauri.conf.json
kb-index/: canon-refs.json  catalog.json  ccc-refs.json  cross-references.json  doc-refs.json  scripture-refs.json
kb-index/embeddings/: model-info.json
kb-tools/: build-catalog.py  build-chunks.py  build-cross-refs.py  build-embeddings.py  build-indexes.py  build-topic-index.py  engine.py  extract-refs.py  mcp_server.py  query.py  search.py  server.py
kb-tools/templates/: index.html
kbmd/: manifest.json
kbmd/canonlaw/: book1.md  book2.md  book3.md  book4.md  book5.md  book6.md  book7.md
kbmd/doctorate/: ambrose_de_sacramentis.md  apologetic.md  augustine_on_christian_doctrine.md  basil_on_holy_spirit.md  (+12 more)
skills/: build_kbmd_from_sources.sh  catholic_source_harvest.sh  health_check.sh  process_kb.py
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: documents.rs  health.rs  mod.rs  query.rs  settings.rs
src-tauri/src/engine/: catalog.rs  context.rs  embeddings.rs  helpers.rs  llm.rs  mod.rs  search.rs
(+427 files in other folders)
