[package]
name = "catholic-knowledge-base"
version = "1.0.1"
edition = "2021"
description = "Catholic Knowledge Base — Local-first theological research app"

[lib]
name = "catholic_kb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
tar = "0.4"
regex = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
dirs = "6"
lazy_static = "1"
reqwest = { version = "0.12", features = ["stream", "blocking", "json"] }
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
